--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Kodey/Desktop/Desktop/bukkit-1.3.1-R1.0.jar"/>
+	<classpathentry kind="lib" path="Dependencies/bukkit-1.3.1-R1.1-20120813.060129-5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
